2013-10-19  Moritz Bunkus  <moritz@bunkus.org>

        * mkvextract: new feature: implemented support for extracting VP9
        tracks into IVF files.

        * mkvmerge: new feature: implemented support for VP9 read from IVF
        and Matroska/WebM files. Implements #899.

        * mkvextract: enhancement: using the same track/attachment ID
        multiple times in "tracks", "attachments" or "timecodes_v2" mode
        will result in an error message instead of one empty
        file. Implements #914.

        * mmg: bug fix: With wxWidgets 2.9.x/3.0.x debug message will no
        longer appear as modal dialogs but only go to the log window.

2013-10-18  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: fixed a crash when reading empty global tag
        files. Fixes #921.

2013-10-17  Moritz Bunkus  <moritz@bunkus.org>

        * build system: bug fix: fix autodetection of Boost's library path
        if it is installed in the multiarch directories
        (e.g. /usr/lib/i386-linux-gnu or /usr/lib/x86_64-linux-gnu).

2013-10-04  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: saved window widths were growing by 1 pixel each
        time mmg was exited.

2013-10-03  Moritz Bunkus  <moritz@bunkus.org>

        * documentation: Added a German translation of the man pages by
        Chris Leick (see AUTHORS).

2013-10-02  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: Reading OGM files with chapter entries not
        encoded in the system's local character set has been fixed. During
        identification the number of chapter entries is still output by
        removing any non-ASCII characters from the chapter entries. When
        muxing an additional warning is output if parsing those chapter
        entries fails, e.g. due to the format being wrong or due to the
        charset guessed wrongly. Fixes #919.

2013-09-17  Moritz Bunkus  <moritz@bunkus.org>
